2007-07-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merging back devel/pvanhoof/sessionwork to trunk/

2007-07-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Cleaning up, coding style fixes
	* Review of TnyCamelFolder and TnyCamelStoreAccount

2007-07-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various fixes that make Modest actually work with this

2007-07-30  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Fixed some bugs in TnyMergeFolder notification function. This
        method was overwriting data into old change, rather than use the 
	new_change structure to propagate changes to observed folders.

        * Fixed bug in TnyCamelSendQueue related with msg-sent signal
	emision. Now, when an error has detected, msg-sent is not emited.

2007-07-27  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-parser.c: (folder_scan_content),
	(folder_scan_step): Initialize some variables because 
	valgrind complains about uninitialized variables here. This does not 
	fix it but it should make things clearer for someone who can fix it.

2007-07-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged tny-camel-folder.c with devel/sessionwork's version
	* This moves the poke-status operations to the account's queue
	* Merged camel-pop3-engine.c with devel/sessionwork's version
	* This fixes a locking problem while disconnecting the POP account

	* Merging the Cond patch from devel/sessionwork

2007-07-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* The long awaited alert, get_pass and forget_pass now in the mainloop

	* This was a major API and behaviour change

2007-07-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a race condition when the account was or is connection or not
	yet finished connecting while the connection-status-changed signal was
	already being used. Introduced a new API for this
	* Introduced the tny_account_is_ready API, which indicates when an
	account is not only valid as instance, but also fully registered
	within the system.